[gd_scene load_steps=4 format=3 uid="uid://0fupwvuhes0e"]

[ext_resource type="Texture2D" uid="uid://cqnauu5t6g3s" path="res://assets/ui/select_circle.png" id="1_3km3h"]
[ext_resource type="Script" uid="uid://cwqltybgg0of6" path="res://scenes/select_circle.gd" id="1_odkta"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_odkta"]
radius = 32.0
height = 128.0

[node name="SelectCircle" type="Node2D"]
z_index = -1
script = ExtResource("1_odkta")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3km3h")

[node name="SelectCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectCollision"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_odkta")

[connection signal="area_entered" from="SelectCollision" to="." method="_on_select_collision_area_entered"]
[connection signal="input_event" from="SelectCollision" to="." method="_on_area_2d_input_event"]
